<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_r8"
    android:layout_gravity="center"
    android:layout_marginHorizontal="24dp"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/ic_plain_credit_card_amico"
                android:contentDescription="@string/string_imagem_add" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColorHint="@color/black_"
                android:hint="@string/hint_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorShapeDefault"
            android:layout_gravity="center"
            android:contentDescription="@string/btn"
            android:text="@string/text_btn_Add"
            app:icon="@drawable/ic_baseline_add_24"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>